--- a/packages/core/src/scss/_global.scss
+++ b/packages/core/src/scss/_global.scss
@@ -42,6 +42,8 @@ $uq-yellow: #FBB800; // rgb(251, 184, 0)
 $uq-blue: #4085C6; // rgb(64, 133, 198)
 $uq-aqua: #00A2C7; // rgb(0, 162, 199)
 $uq-green: #2EA836; // rgb(46, 168, 54)
+// Additional
+$uq-purple-dark: #49206c; // rgb(73, 32, 108)
 // UQ Purple gradient
 $uq-purple-gradient: linear-gradient(90deg, $uq-purple 0%, 87%, $uq-purple-light 100%);
 // UQ Secondary - Neutral Tints
