--- a/packages/storybook-html/src/components/intro/kitchen-sink.html
+++ b/packages/storybook-html/src/components/intro/kitchen-sink.html
@@ -283,15 +283,26 @@
 </div>
 <br/>
 
+<!-- button -->
 <div class="uq-grid">
   <div class="uq-grid__col uq-grid__col--6">
     <h2>Button</h2>
-    <a href="#" class="uq-button">Button</a>
-    <a href="#" class="uq-button uq-button--secondary">Button secondary</a>
-    <a href="#" class="uq-button uq-button--outline">Button outline</a>
-    <a href="#" class="uq-button uq-button--outline uq-button--secondary">Button outline secondary</a>
-    <a href="#" class="uq-button uq-button--text">Button text</a>
-    <a href="#" class="uq-button uq-button--text uq-button--secondary">Button text secondary</a>
+    <h6>Primary</h6>
+    <button class="uq-button">Button</button>
+    <button class="uq-button uq-button--outline">Button outline</button>
+    <button class="uq-button uq-button--text">Button text</button>
+    <h6>Secondary</h6>
+    <button class="uq-button uq-button--secondary">Button</button>
+    <button class="uq-button uq-button--secondary uq-button--outline">Button outline</button>
+    <button class="uq-button uq-button--secondary uq-button--text">Button text</button>
+    <h6>Secondary - Light</h6>
+    <button class="uq-button uq-button--secondary uq-button--outline uq-button--light">Button outline</button>
+    <button class="uq-button uq-button--secondary uq-button--text uq-button--light">Button text</button>
+    <p><i><small>(for dark backgrounds)</small></i></p>
+    <h6>Purple</h6>
+    <button class="uq-button uq-button--purple">Button</button>
+    <button class="uq-button uq-button--purple uq-button--outline">Button outline</button>
+    <button class="uq-button uq-button--purple uq-button--text">Button text</button>
   </div>
 </div>
 <br/><br/>
