Button doc updated, gallery examples updated

--- a/packages/storybook-html/src/components/intro/kitchen-sink.html
+++ b/packages/storybook-html/src/components/intro/kitchen-sink.html
@@ -289,20 +289,42 @@
     <h2>Button</h2>
     <h6>Primary</h6>
     <button class="uq-button">Button</button>
-    <button class="uq-button uq-button--outline">Button outline</button>
-    <button class="uq-button uq-button--text">Button text</button>
+    <button class="uq-button uq-button--outline">Button</button>
+    <button class="uq-button uq-button--text">Button</button>
     <h6>Secondary</h6>
     <button class="uq-button uq-button--secondary">Button</button>
-    <button class="uq-button uq-button--secondary uq-button--outline">Button outline</button>
-    <button class="uq-button uq-button--secondary uq-button--text">Button text</button>
+    <button class="uq-button uq-button--secondary uq-button--outline">Button</button>
+    <button class="uq-button uq-button--secondary uq-button--text">Button</button>
     <h6>Secondary - Light</h6>
-    <button class="uq-button uq-button--secondary uq-button--outline uq-button--light">Button outline</button>
-    <button class="uq-button uq-button--secondary uq-button--text uq-button--light">Button text</button>
+    <button class="uq-button uq-button--secondary uq-button--outline uq-button--light">Button</button>
+    <button class="uq-button uq-button--secondary uq-button--text uq-button--light">Button</button>
     <p><i><small>(for dark backgrounds)</small></i></p>
     <h6>Purple</h6>
     <button class="uq-button uq-button--purple">Button</button>
-    <button class="uq-button uq-button--purple uq-button--outline">Button outline</button>
-    <button class="uq-button uq-button--purple uq-button--text">Button text</button>
+    <button class="uq-button uq-button--purple uq-button--outline">Button</button>
+    <button class="uq-button uq-button--purple uq-button--text">Button</button>
+    <h6>Expand</h6>
+    <button class="uq-button uq-button--expand">Button</button>
+    <br/><br/>
+    <button class="uq-button uq-button--expand uq-button--outline">Button</button>
+    <br/><br/>
+    <button class="uq-button uq-button--expand uq-button--text">Button</button>
+    <br/><br/>
+    <button class="uq-button uq-button--secondary uq-button--expand">Button</button>
+    <br/><br/>
+    <button class="uq-button uq-button--secondary uq-button--expand uq-button--outline">Button</button>
+    <br/><br/>
+    <button class="uq-button uq-button--secondary uq-button--expand uq-button--text">Button</button>
+    <br/><br/>
+    <button class="uq-button uq-button--secondary uq-button--expand uq-button--outline uq-button--light">Button</button>
+    <br/><br/>
+    <button class="uq-button uq-button--secondary uq-button--expand uq-button--text uq-button--light">Button</button>
+    <br/><br/>
+    <button class="uq-button uq-button--purple uq-button--expand">Button</button>
+    <br/><br/>
+    <button class="uq-button uq-button--purple uq-button--expand uq-button--outline">Button</button>
+    <br/><br/>
+    <button class="uq-button uq-button--purple uq-button--expand uq-button--text">Button</button>
   </div>
 </div>
 <br/><br/>
