--- a/packages/card/src/scss/_global.scss
+++ b/packages/card/src/scss/_global.scss
@@ -10,3 +10,4 @@ $card-full-height: 22rem;
 $card-full-width: 134rem;
 $card-summary-lines-to-show: 4;
 $card-shaded-bg: core.$uq-neutral-light20;
+$card-body-text: core.$uq-neutral-dark60;
