--- a/packages/card/src/scss/_global.scss
+++ b/packages/card/src/scss/_global.scss
@@ -11,3 +11,10 @@ $card-full-width: 134rem;
 $card-summary-lines-to-show: 4;
 $card-shaded-bg: core.$uq-neutral-light20;
 $card-body-text: core.$uq-neutral-dark60;
+
+// Truncate card body text to 146 characters, then ellipse ...
+@mixin truncate-card-1col-body-text {
+    white-space: normal;
+    overflow: hidden;
+    max-height: 75px;
+}
